--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="app">
-        <nav class="navigation"> yo {{current_time()}}</nav>
+        <nav class="navigation"> yo {{current_time().month()}}</nav>
         
         <div class="container">
             <a class="button" href="#">Default Button</a>
